--- a/config.json
+++ b/config.json
@@ -31,7 +31,8 @@
       "DRW",
       "Citadel",
       "Virtu",
-      "Jump trading"
+      "Jump trading",
+      "hft"
     ],
     "enabled": true
   },
